[project]
name = "naroudataalldownload"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rumia-Channel", email = "'github@rumia-ch.uk'" }
]
dependencies = [
    "pip>=24.0",
    "setuptools>=69.5.1",
    "xlsxwriter>=3.2.0",
    "pandas>=2.2.2",
    "tqdm>=4.66.2",
    "requests>=2.31.0",
    "nuitka>=2.1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/naroudataalldownload"]
